# RootEngine1

./: CMakeLists.txt  LICENSE.txt  README.md
include/: GameObject.hpp  Globals.hpp  Player.hpp  glad.h
res/: app.rc
src/: Global.cpp  Player.cpp  glad.c  main.cpp
